feat(i18n, lang selector): fix lang selector in mobile, add i18n all

--- a/src/i18n/locales/ar/conditions.json
+++ b/src/i18n/locales/ar/conditions.json
@@ -8,7 +8,7 @@
   "WCGWillKeep": "ستحافظ WCG على سرية المعلومات الشخصية للعميل ، ولكنها قد توفرها للمنظمات / الأشخاص التاليين بناءً على الظروف والاحتياجات الفعلية:",
   "WCGOtherCompanies": "تشمل شركات WCG الأخرى الشركات المملوكة بالكامل أو المملوكة جزئيًا باسم الشركات التابعة المملوكة بالكامل أو الشركات التابعة لفروع أو مديري وموظفي المجموعة ؛",
   "agentsAndThirdPartyService": "يشمل الوكلاء ومقدمو الخدمات من الأطراف الثالثة الذين يتعاملون مع الأعمال ذات الصلة للعملاء: غرف المقاصة وشركات الخدمات المهنية والمؤسسات المالية ومقدمي خدمات أنظمة الكمبيوتر وخدمات دعم أنظمة الاتصالات كإجراءات ضرورية لاستكمال خدمات العملاء ؛",
-  "anyRegulatoryOrGovernmentAgency": "أي وكالة تنظيمية أو حكومية ذات صلة أو تشرف على أي عمل من أعمال WCG ؛",
+  "anyRegulatoryOrGovernmentAgency": "أي وكالة تنظيمية أو حكومية ذات صلة أو تشرف على أي عمل من أعمال WCG ",
   "personsDeemedAppropriate": "الأشخاص الذين يعتبرون مناسبين أو مناسبين وفقًا لالتزام السرية ، بما في ذلك الشركات الأعضاء في المجموعة وموظفيها. يجب على هؤلاء الأشخاص المصرح لهم الحفاظ على سرية المعلومات الشخصية للعميل.",
   "AccordingTo": "وفقًا لشروط اللوائح ، يحق للعملاء طلب تصحيح أي بيانات خاطئة عن العملاء من قبل WCG والمطالبة كتابيًا بإنهاء استخدام بياناتهم الشخصية لأغراض التسويق المباشر أو غير المباشر. تحتفظ WCG بالحق في فرض رسوم معقولة لمعالجة طلبات البيانات أو التصحيحات التي تتم وفقًا لأحكام اللوائح.",
   "conditions": "شروط",
