--- a/src/i18n/locales/en/platform.json
+++ b/src/i18n/locales/en/platform.json
@@ -35,7 +35,7 @@
   "compatibleWithExpertAdvisors": "Compatible with Expert Advisors (smart automatic trading programs), custom indicators and other application tools",
   "itHasAMobileVersion": "It has a mobile version of the trading platform. You can use the mobile APP to trade and manage orders anytime, anywhere.",
   "provideAnAdvanced": "Provide an advanced notification signal system",
-  "downloadTheWCGMT4": "Download the WCG MT4 trading platform now,",
+  "downloadTheWCGMT4": "Download the WCG MT4 trading platform now",
   "usingMT4AllowsYou": "Using MT4 allows you to monitor the market more accurately, manage your positions quickly and efficiently, optimize trading strategies,enhance your trading advantages, and enjoy a perfect trading experience.",
   "tradingSystem": "Trading system",
   "includesCurrentPriceExecution": "Includes current price execution, trading in both directions, four types of pending orders and two stop-loss orders and trailing stop-loss functions. The one-click trading function allows you to send trading commands directly from the chart with one click. The built-in quotation chart provides an accurate way to judge the timing of the transaction.",
