--- a/src/i18n/locales/ms/products.json
+++ b/src/i18n/locales/ms/products.json
@@ -1,22 +1,22 @@
 {
-  "tradingTime": "Trading time is GMT+3 platform time (summer time), most products will be postponed for 1 hour after entering winter time. For specific trading hours, it is recommended that customers follow the actual announcement on the platform.",
-  "mainForex": "Main Foreign Exchange",
-  "secondaryForex": "Secondary Foreign Exchange",
-  "preciousMetals": "Precious Metals",
-  "crudeOil": "Crude Oil",
-  "index": "Index",
-  "uSShareCFD": "US Share CFD",
-  "cryptocurrencies": "Cryptocurrencies",
-  "product": "Product",
-  "name": "Name",
-  "lotRange": "Lot Range (Min/Max)",
-  "contractUnit": "Contract Unit",
-  "standardPoint": "Per standard point",
-  "leverage": "Leverage Proportion",
-  "basicMargin": "Basic Margin",
-  "marginCloseout": "Margin Closeout",
-  "openingTime": "Opening Time (Mon)",
-  "closingTime": "Closing Time (Fri)",
+  "tradingTime": "Waktu perdagangan adalah waktu platform GMT + 3 (waktu musim panas), kebanyakan produk akan ditunda selama 1 jam setelah memasuki waktu musim sejuk. Untuk waktu perdagangan tertentu, disarankan agar pelanggan mengikuti pengumuman sebenar di platform.",
+  "mainForex": "Pertukaran Asing Utama",
+  "secondaryForex": "Pertukaran Asing Sekunder",
+  "preciousMetals": "Logam berharga",
+  "crudeOil": "Minyak mentah",
+  "index": "Indeks",
+  "uSShareCFD": "CFD Saham AS",
+  "cryptocurrencies": "Cryptocurrency",
+  "product": "Produk",
+  "name": "Nama",
+  "lotRange": "Julat Lot (Min / Maksimum)",
+  "contractUnit": "Unit Kontrak",
+  "standardPoint": "Setiap titik standard",
+  "leverage": "Perkadaran Leverage",
+  "basicMargin": "Margin Asas",
+  "marginCloseout": "Penutupan Margin",
+  "openingTime": "Waktu Pembukaan (Isnin)",
+  "closingTime": "Waktu Tutup (Jumaat)",
   "ounce": "ounce",
   "barrels": "barrels",
   "share": "share",
