--- a/src/i18n/locales/vi/crudeOil.json
+++ b/src/i18n/locales/vi/crudeOil.json
@@ -1,36 +1,36 @@
 {
-  "crudeOil": "Crude Oil",
-  "crudeOilIsNotOnly": "Crude oil is not only a highly sought-after commodity in the world, but also a must for economic activities in energy supply, industrial, and transportation use.",
-  "viewTradingProducts": "View Trading Products",
-  "howToTradeCommodities": "How to trade commodities",
-  "crudeOilAndNaturalGas": "Crude oil and natural gas are the most popular commodities. They generate huge trading volume at all times, providing online traders with numerous trading opportunities. Whether it is US crude oil (WTI), Brent crude oil (BRENT) or natural gas (NATGAS), energy commodities are quoted in US dollars.",
-  "whenYouAreTradingEnergy": "When you are trading energy CFDs, the exchange rate with the u.s dollar is a key factor to keep an eye on. Our bulk commodities offer both \"buy\" and \"sell\" prices. The difference between the buying price and the selling price is called \"spread\".",
-  "supposeYouThinkThat": "Suppose you think that the price of WTI crude oil will rise, so you buy 1 lot of WTI at a price of $54.17. This means that when the market moves in the direction you expect, for every 0.01 change in the price, your profit is $1.",
-  "basicKnowledgeOfCrudeOil": "Basic knowledge of crude oil",
-  "crudeOilIsUsedInManufacturing": "Crude oil is used in manufacturing, transportation and energy production. Its supply is variable and its storage capacity is limited, which has a huge impact on the global economy. Crude oil is very popular among traders. Its supply and demand are constantly changing, so there will always be price fluctuations and high liquidity.",
-  "youDoNotNeedTo": "You do not need to deal with large amounts of crude oil to conduct oil market transactions. Because most oil and gas transactions are realized through futures.",
-  "typesOfCrudeOilTransactions": "Types of crude oil transactions",
-  "likeStocks": "Like stocks, crude oil is also traded on exchanges. But unlike stocks, they are traded on the basis of crude oil. The forms of crude oil mined all over the world are not exactly the same. Through crude oil benchmarks, traders can quickly identify the quality of the oil they buy and the location of the drilling. The crude oil spot price represents the cost of buying or selling crude oil and delivering it immediately or on the spot (rather than delivering it on a set date in the future). Therefore, the futures price reflects the market's belief that the value of crude oil when it expires in the future, and the spot price reflects the current value of crude oil.",
-  "WTI": "West Texas Intermediate (WTI)",
-  "thisIsACrudeOilProduced": "This is a crude oil produced in the United States, also known as Texas Light Sweet Crude Oil. The so-called \"light\" means that it is less dense than most OPEC crude oils, while \"sweet\" means that it has a lower sulfur content.",
-  "BRENT": "Brent Crude Oil (BRENT)",
-  "brentCrudeOil": "Brent Crude Oil (BRENT), referred to as \"Brent\", is a kind of crude oil produced in the North Sea. Brent crude oil is also described as \"light sweet crude\", just like WTI.",
-  "majorAffectingCrudeOilPriceFactors": "Major affecting crude oil price factors",
-  "crudeOilIsOneOfTheMostTraded": "Crude oil is one of the most traded commodities in the world, and the crude oil market is undergoing new changes every day",
-  "extractionAndRefining": "Extraction and refining",
-  "crudeOilExtractionAndRefining": "Crude oil extraction and refining processes are expensive. Because oil reserves are located deep underground, extracting crude oil from underground requires a relatively huge price.",
-  "anyTechnologicalProgress": "Any technological progress or setbacks in the mining process have a direct impact on crude oil prices.",
-  "consumptionAndDemand": "Consumption and demand",
-  "theLargestConsumer": "The largest consumer of and demand for crude oil is the United States, followed by Japan, China, and European industrial countries such as Germany and the United Kingdom.",
-  "theIndustrialAndEconomicSectors": "The industrial and economic sectors of these countries have great demand for crude oil. Therefore, their demand will affect the global crude oil price.",
-  "availabilityAndSupply": "Availability and supply",
-  "noMatterHowTheSupplyChanges": "No matter how the supply changes, the availability of crude oil will be affected by political and economic factors. Rising inflation, unemployment and poverty rates may lead to a decline in consumption levels, making it impossible for those affected to afford certain products. Political unrest and rebellion may also lead to a reduction in crude oil imports and the smuggling of imported commodities.",
-  "naturalDisastersAndAccidents": "Natural disasters and accidents",
-  "naturalDisastersSuchAs": "Natural disasters such as earthquakes and hurricanes are unpredictable events. The losses to drilling sites and refineries caused by these disasters may hinder and delay crude oil production.",
-  "firesAndMechanicalFailures": "Fires and mechanical failures can also cause delays in production due to the need for time to recover. Delays caused by these environmental factors will reduce the supply of crude oil, leading to price increases.",
-  "youNeedToBeFamiliarWith": "You need to be familiar with and regularly review two crude oil reports",
-  "USDepartmentOfEnergy": "US Department of Energy's crude oil inventory report",
-  "theUSDepartmentOfEnergy": "The US Department of Energy's crude oil inventory report released every Wednesday. The report reflects the inventory of US crude oil. Since the United States is the largest consumer of crude oil, it is necessary for traders to analyze their demand by regularly understanding crude oil inventory.",
-  "OPEC": "OPEC Crude Oil Market Report",
-  "theCrudeOilReportYouShouldStudy": "The crude oil report you should study is the monthly and annual reports issued by OPEC. These reports provide a way for you to understand the production goals of OPEC member countries. Their production targets and quotas reflect the current level of crude oil supply and demand in the world market."
+  "crudeOil": "Dầu thô",
+  "crudeOilIsNotOnly": "Dầu thô không chỉ là mặt hàng được săn lùng nhiều trên thế giới mà còn là mặt hàng bắt buộc đối với các hoạt động kinh tế trong cung cấp năng lượng， sử dụng công nghiệp và giao thông。",
+  "viewTradingProducts": "Xem Sản phẩm Giao dịch",
+  "howToTradeCommodities": "Cách thức giao dịch hàng hóa",
+  "crudeOilAndNaturalGas": "Dầu thô và khí đốt tự nhiên là những mặt hàng phổ biến nhất。 Chúng tạo ra khối lượng giao dịch khổng lồ mọi lúc， cung cấp cho các nhà giao dịch trực tuyến nhiều cơ hội giao dịch。 Cho dù đó là dầu thô Mỹ (WTI)， dầu thô Brent (BRENT) hay khí đốt tự nhiên (NATGAS)， các mặt hàng năng lượng đều được tính bằng đô la Mỹ。",
+  "whenYouAreTradingEnergy": "Khi bạn đang giao dịch CFD năng lượng， tỷ giá hối đoái với đô la Mỹ là yếu tố chính cần để ý。 Hàng hóa số lượng lớn của chúng tôi cung cấp cả giá \"mua\" và \"bán\"。 Chênh lệch giữa giá mua và giá bán được gọi là \"spread – chênh lệch giá\"。",
+  "supposeYouThinkThat": "Giả sử bạn nghĩ rằng giá dầu thô WTI sẽ tăng， vì vậy bạn mua 1 lô WTI với mức giá $ 54，17。 Điều này có nghĩa là khi thị trường di chuyển theo hướng bạn mong đợi， cứ mỗi 0，01 thay đổi về giá， lợi nhuận của bạn là 1 đô la。",
+  "basicKnowledgeOfCrudeOil": "Kiến thức cơ bản về dầu thô",
+  "crudeOilIsUsedInManufacturing": "Dầu thô được sử dụng trong sản xuất， vận chuyển và sản xuất năng lượng。 Nguồn cung của nó thay đổi và khả năng lưu trữ hạn chế， điều này có tác động rất lớn đến nền kinh tế toàn cầu。 Dầu thô rất phổ biến trong giới đầu tư。 Cung và cầu của nó liên tục thay đổi nên sẽ luôn có sự biến động về giá và tính thanh khoản cao。",
+  "youDoNotNeedTo": "Bạn không cần phải xử lý một lượng lớn dầu thô để thực hiện các giao dịch trên thị trường dầu。 Bởi vì hầu hết các giao dịch dầu khí được thực hiện thông qua hợp đồng tương lai。",
+  "typesOfCrudeOilTransactions": "Các loại giao dịch dầu thô",
+  "likeStocks": "Giống như chứng khoán， dầu thô cũng được giao dịch trên các sàn giao dịch。 Nhưng không giống như cổ phiếu， chúng được giao dịch trên cơ sở dầu thô。 Các dạng dầu thô được khai thác trên khắp thế giới không hoàn toàn giống nhau。 Thông qua định mức dầu thô， các nhà đầu tư có thể nhanh chóng xác định chất lượng dầu họ mua và địa điểm khoan。 Giá dầu thô giao ngay thể hiện chi phí mua hoặc bán dầu thô và giao ngay hoặc tại chỗ (chứ không phải giao vào một ngày đã định trong tương lai)。 Do đó， giá giao sau phản ánh niềm tin của thị trường rằng giá trị của dầu thô khi nó hết hạn trong tương lai， và giá giao ngay phản ánh giá trị hiện tại của dầu thô。",
+  "WTI": "Trung cấp Tây Texas (WTI)",
+  "thisIsACrudeOilProduced": "Đây là một loại dầu thô được sản xuất tại Hoa Kỳ， còn được gọi là Texas Light Sweet Crude Oil。 Cái gọi là \"nhẹ\" có nghĩa là nó ít đậm đặc hơn hầu hết các loại dầu thô OPEC， trong khi \"ngọt\" có nghĩa là nó có hàm lượng lưu huỳnh thấp hơn.",
+  "BRENT": "Dầu thô Brent (BRENT)",
+  "brentCrudeOil": "Dầu thô Brent (BRENT)， được gọi là \"Brent\"， là một loại dầu thô được sản xuất ở Biển Bắc。 Dầu thô Brent cũng được mô tả là \"dầu thô ngọt nhẹ\"， giống như WTI。",
+  "majorAffectingCrudeOilPriceFactors": "Các yếu tố ảnh hưởng lớn đến giá dầu thô",
+  "crudeOilIsOneOfTheMostTraded": "Dầu thô là một trong những mặt hàng được giao dịch nhiều nhất trên thế giới và thị trường dầu thô đang có những thay đổi mới hàng ngày",
+  "extractionAndRefining": "Chiết xuất và tinh chế",
+  "crudeOilExtractionAndRefining": "Quá trình khai thác và tinh chế dầu thô rất tốn kém。 Do trữ lượng dầu nằm sâu dưới lòng đất nên việc khai thác dầu thô từ lòng đất đòi hỏi một mức giá tương đối lớn。",
+  "anyTechnologicalProgress": "Bất kỳ tiến bộ công nghệ hoặc trở ngại nào trong quá trình khai thác đều có tác động trực tiếp đến giá dầu thô。",
+  "consumptionAndDemand": "Tiêu dùng và Nhu cầu",
+  "theLargestConsumer": "Nước tiêu thụ và có nhu cầu dầu thô lớn nhất là Hoa Kỳ， tiếp theo là Nhật Bản， Trung Quốc và các nước công nghiệp châu Âu như Đức và Anh.",
+  "theIndustrialAndEconomicSectors": "Các ngành công nghiệp và kinh tế của các nước này có nhu cầu lớn về dầu thô。 Do đó， nhu cầu của họ sẽ ảnh hưởng đến giá dầu thô toàn cầu。",
+  "availabilityAndSupply": "Sự khả dụng và nguồn cung cấp",
+  "noMatterHowTheSupplyChanges": "Cho dù nguồn cung thay đổi như thế nào， sự khả dụng của dầu thô sẽ bị ảnh hưởng bởi các yếu tố chính trị và kinh tế。 Lạm phát， tỷ lệ thất nghiệp và tỷ lệ đói nghèo gia tăng có thể dẫn đến giảm mức tiêu dùng， khiến những người bị ảnh hưởng không thể mua được một số sản phẩm nhất định。 Bất ổn chính trị và nổi loạn cũng có thể dẫn đến giảm nhập khẩu dầu thô và buôn lậu hàng hóa nhập khẩu。",
+  "naturalDisastersAndAccidents": "Thiên tai và tai nạn",
+  "naturalDisastersSuchAs": "Thiên tai như động đất và bão là những sự kiện không thể đoán trước。 Những thiệt hại đối với các địa điểm khoan và nhà máy lọc dầu do những thảm họa này gây ra có thể cản trở và trì hoãn sản xuất dầu thô。",
+  "firesAndMechanicalFailures": "Hỏa hoạn và hỏng hóc cơ học cũng có thể gây ra sự chậm trễ trong sản xuất do cần có thời gian để phục hồi。 Sự chậm trễ do các yếu tố môi trường này gây ra sẽ làm giảm nguồn cung dầu thô， dẫn đến tăng giá。",
+  "youNeedToBeFamiliarWith": "Bạn cần phải làm quen và thường xuyên xem xét hai báo cáo dầu thô",
+  "USDepartmentOfEnergy": "Báo cáo tồn kho dầu thô của Bộ Năng lượng Hoa Kỳ",
+  "theUSDepartmentOfEnergy": "Báo cáo tồn kho dầu thô của Bộ Năng lượng Hoa Kỳ công bố vào thứ Tư hàng tuần. Báo cáo phản ánh lượng dầu thô tồn kho của Mỹ. Vì Hoa Kỳ là nước tiêu thụ dầu thô lớn nhất, các nhà kinh doanh cần phải phân tích nhu cầu của họ bằng cách thường xuyên tìm hiểu về lượng dầu thô tồn kho.",
+  "OPEC": "Báo cáo thị trường dầu thô của OPEC",
+  "theCrudeOilReportYouShouldStudy": "Báo cáo dầu thô bạn nên nghiên cứu là báo cáo hàng tháng và hàng năm do OPEC phát hành. Các báo cáo này cung cấp một cách để bạn hiểu các mục tiêu sản xuất của các nước thành viên OPEC. Các mục tiêu và hạn ngạch sản xuất của họ phản ánh mức cung và cầu dầu thô hiện tại trên thị trường thế giới."
 }
