--- a/src/i18n/locales/vi/forex.json
+++ b/src/i18n/locales/vi/forex.json
@@ -1,41 +1,41 @@
 {
-  "foreignExchangeTransactions": "Foreign exchange transactions",
-  "theForeignExchange": "The foreign exchange market has an estimated daily trading volume of approximately US$ 5 trillion, making it the world's largest and most liquid financial market. By investing in foreign currencies through the WCG foreign exchange margin trading platform, you can participate in this exciting part of the financial world, get immediate institutional market prices, and 24-hour uninterrupted transactions. WCG foreign exchange trading account meets the different investment needs of users. New investors can also try our free demo account to experience the fast and easy-to-use MT4 trading platform.",
-  "viewTradingProducts": "View Trading Products",
-  "howToPerform": "How to perform foreign exchange transactions",
-  "foreignExchangeCurrencies": "Foreign exchange currencies always appear in pairs, for example: EUR/USD, GBP/USD, USD/JPY.",
-  "inForeignExchangeTrading": "In foreign exchange trading, you can either buy (long) or sell (short). However, when you trade foreign exchange currency pairs online, you are not buying or selling real currencies. Your operation is actually a bet on the rise or fall of a currency pair. The riseorfallofacurrencyisactuallyariseorfallrelativetoanothercurrency.",
-  "throughWCG": "Through WCG, you can trade direct and cross currencies, the minimum capital for opening an account is only US$ 100.",
-  "unlikeOther": "Unlike other financial markets, the foreign exchange market does not have a fixed central exchange or physical location. A 24-hour global network of foreign exchange transactions is formed by banks, large companies and individual traders. This means that foreign exchange rates fluctuate 24 hours a day, providing many trading opportunities.",
-  "buyLong": "Buy-long",
-  "judgeTheMarket": "Judge the market as an upward trend, hold it after buying a financial product, and wait for it to rise before selling, to earn the intermediate spread.",
-  "sellShort": "Sell-short",
-  "anticipatingThat": "Anticipating that the market will fall, sell the chips in hand and buy after the price drops; in short, it means selling first and then buying.",
-  "learnMore": "Learn More",
-  "startForexTrading": "Start forex trading in five easy steps",
-  "joinA24Hour": "Join a 24-hour global network of foreign exchange transactions composed of banks, large companies and individual traders",
-  "chooseAForeign": "Choose a foreign exchange currency pair",
-  "theFirstDecision": "The first decision to become a foreign exchange trader is to choose the foreign exchange currency pair you want to trade.",
-  "inWCG": "In WCG, we provide you with a wide range of products including direct and cross currency pairs. New traders often start trading with the currency pair they are most familiar with, and then look for trading opportunities in other currency pairs that are not so familiar.",
-  "determineTheDirection": "Determine the direction of buying and selling",
-  "afterChoosing": "After choosing your trading products, you should decide whether to buy or sell by speculating on the future direction of the market. A foreign exchange currency pair is composed of two currencies. The currency on the left hand side is called the \"base currency\" and the currency on the right hand side is called the \"quote currency\". Therefore:",
-  "ifYouThinkThatTheBaseCurrencyIsStronger": "If you think that the base currency is stronger than the quote currency, or the quote currency is relatively weaker than the base currency, then buy this currency pair.",
-  "ifYouThinkThatTheBaseCurrencyIsWeaker": "If you think that the base currency is weaker than the quote currency, or the quote currency is relatively stronger than the base currency, then sell the currency pair.",
-  "atTheSameTime": "At the same time, every currency pair has two prices at every moment. One is the bid price and the other is the ask price. The difference between the two prices is called the \"spread\", which is your transaction cost.",
+  "foreignExchangeTransactions": "Giao dịch ngoại hối",
+  "theForeignExchange": "Thị trường ngoại hối có khối lượng giao dịch hàng ngày ước tính khoảng 5 nghìn tỷ đô la Mỹ， trở thành thị trường tài chính thanh khoản lớn nhất thế giới。 Bằng cách đầu tư vào ngoại tệ thông qua nền tảng giao dịch ký quỹ ngoại hối WCG， bạn có thể tham gia vào phần thú vị này của thế giới tài chính， nhận giá thị trường thể chế ngay lập tức và giao dịch không bị gián đoạn trong 24 giờ。 Tài khoản giao dịch ngoại hối WCG đáp ứng các nhu cầu đầu tư khác nhau của người dùng。 Các nhà đầu tư mới cũng có thể dùng thử tài khoản demo miễn phí của chúng tôi để trải nghiệm nền tảng giao dịch MT4 nhanh chóng và dễ sử dụng.",
+  "viewTradingProducts": "Xem Sản phẩm Giao dịch",
+  "howToPerform": "Cách thực hiện các giao dịch ngoại hối",
+  "foreignExchangeCurrencies": "Các loại tiền ngoại hối luôn xuất hiện theo cặp， ví dụ: EUR/USD， GBP/USD， USD/JPY.",
+  "inForeignExchangeTrading": "Trong giao dịch ngoại hối， bạn có thể mua (dài) hoặc bán (ngắn)。 Tuy nhiên， khi bạn giao dịch các cặp tiền tệ ngoại hối trực tuyến， bạn không phải là mua hoặc bán tiền tệ thực。 Hoạt động của bạn thực sự là đặt cược vào sự tăng hoặc giảm của một cặp tiền tệ。 Sự tăng hoặc giảm của một loại tiền tệ thực sự là sự tăng hoặc giảm so với một loại tiền tệ khác.",
+  "throughWCG": "Thông qua WCG， bạn có thể giao dịch tiền tệ trực tiếp hoặc giao dịch chéo， số vốn tối thiểu để mở tài khoản chỉ $100 USD.",
+  "unlikeOther": "Không giống như các thị trường tài chính khác， thị trường ngoại hối không có trung tâm trao đổi cố định hoặc địa điểm thực tế。 Mạng lưới giao dịch ngoại hối toàn cầu 24 giờ được hình thành bởi các ngân hàng， công ty lớn và các nhà giao dịch cá nhân。 Điều này có nghĩa là tỷ giá hối đoái biến động 24 giờ một ngày， mang lại nhiều cơ hội giao dịch.",
+  "buyLong": "Mua dài",
+  "judgeTheMarket": "Đánh giá thị trường xu hướng là tăng， giữ giá đó sau khi mua một sản phẩm tài chính và đợi giá tăng lên trước khi bán， để kiếm chênh lệch trung gian.",
+  "sellShort": "Bán ngắn",
+  "anticipatingThat": "Dự đoán thị trường sẽ giảm， bán số chip trong tay và mua sau khi giá giảm; trong ngắn hạn， điều đó có nghĩa là bán trước và sau đó mua lại.",
+  "learnMore": "Tìm hiểu thêm",
+  "startForexTrading": "Bắt đầu giao dịch ngoại hối trong năm bước đơn giản",
+  "joinA24Hour": "Tham gia mạng lưới giao dịch ngoại hối toàn cầu 24 giờ bao gồm các ngân hàng， công ty lớn và các nhà giao dịch cá nhân",
+  "chooseAForeign": "Chọn một cặp tiền tệ ngoại hối",
+  "theFirstDecision": "Quyết định đầu tiên để trở thành một nhà kinh doanh ngoại hối là chọn cặp tiền tệ ngoại hối mà bạn muốn giao dịch.",
+  "inWCG": "Tại WCG, chúng tôi cung cấp cho bạn nhiều loại sản phẩm bao gồm các cặp tiền tệ trực tiếp và chéo. Các nhà giao dịch mới thường bắt đầu giao dịch với cặp tiền mà họ quen thuộc nhất, sau đó tìm kiếm cơ hội giao dịch ở các cặp tiền khác không quá quen thuộc.",
+  "determineTheDirection": "Xác định hướng mua và bán",
+  "afterChoosing": "Sau khi chọn sản phẩm giao dịch, bạn nên quyết định mua hay bán bằng cách suy đoán về hướng tương lai của thị trường. Một cặp tiền tệ ngoại hối bao gồm hai loại tiền tệ. Đơn vị tiền tệ ở phía bên tay trái được gọi là \"tiền tệ cơ sở\" và đơn vị tiền tệ ở phía bên tay phải được gọi là \"tiền tệ định giá\". Vì vậy:",
+  "ifYouThinkThatTheBaseCurrencyIsStronger": "Nếu bạn nghĩ rằng đồng tiền cơ sở mạnh hơn đồng tiền định giá hoặc đồng tiền định giá tương đối yếu hơn đồng tiền cơ sở, thì hãy mua cặp tiền tệ này.",
+  "ifYouThinkThatTheBaseCurrencyIsWeaker": "Nếu bạn cho rằng đồng tiền cơ sở yếu hơn đồng tiền định giá hoặc đồng tiền định giá tương đối mạnh hơn đồng tiền cơ sở, thì hãy bán cặp tiền tệ đó.",
+  "atTheSameTime": "Đồng thời, mọi cặp tiền tệ đều có hai mức giá tại mọi thời điểm. Một là giá đặt mua và một là giá bán. Sự khác biệt giữa hai mức giá được gọi là \"spread\", là chi phí giao dịch của bạn.",
   "setStop": "Set stop loss/take profit",
-  "stopLossTakeProfit": "Stop loss/take profit is a preset price. When the exchange rate reaches this preset price, the corresponding position will be automatically closed.",
-  "thePurposeOf": "The purpose of setting stop loss/take profit is to lock the profit or loss of the position.",
-  "monitorYourTrading": "Monitor your trading positions",
-  "beforeThePositionIsClosed": "Before the position is closed, your profit and loss will change with price fluctuations.",
-  "soRealTimeMonitoring": "So real-time monitoring your profit and loss is very important. By monitoring the situation, you can add or close positions immediately when needed.",
-  "closeYourPosition": "Close your position",
-  "itIsExtremelyImportant": "It is extremely important for FOREX investors to timely close their position when identifying different phases of market movements.",
-  "FailingToDoSo": "Failing to do so are sometimes costly, in particular when the market moves against them.",
-  "foreignExchangeQuotes": "Foreign exchange quotes generally have five decimal places. Among them, the fourth decimal place is the one that requires the most attention. We often use pips to calculate profit and loss. Foreign exchange trading volume is generally counted in \"lots\", and 1 lot is equal to 100,000 base currency units. You can also trade units smaller than 1 lot, such as mini lots or micro lots. Mini lots correspond to 10,000 currency units (0.1lots), and micro lots correspond to 1,000 currency units (0.01lots).",
-  "supportLeverage": "Support leverage",
-  "youCanUtilizeLeverage": "You can utilize leverage to open a position larger than your capital amount. This approach may lead to more profits or losses. Therefore, it is very important to manage risks when conducting foreign exchange transactions.",
-  "fundingThreshold": "Funding threshold",
-  "whenTradingForeignExchange": "When trading foreign exchange online, you can decide the size of your open positions. Deposit a suitable amount of funds according to your own situation to participate in the transaction.",
-  "hoursTrading": "24 hours trading",
-  "fromMondayMorning": "From Monday morning to Saturday morning, the foreign exchange market is always open for trading. This makes the foreign exchange market an ideal trading market for amateur traders."
+  "stopLossTakeProfit": "Cắt lỗ / chốt lời là một mức giá đặt trước. Khi tỷ giá hối đoái đạt đến mức giá đặt trước này, vị thế tương ứng sẽ tự động bị đóng.",
+  "thePurposeOf": "Mục đích của việc đặt lệnh cắt lỗ / chốt lời là để khóa lãi hoặc lỗ của vị thế.",
+  "monitorYourTrading": "Giám sát các vị thế giao dịch của bạn",
+  "beforeThePositionIsClosed": "Trước khi vị thế được đóng, lãi và lỗ của bạn sẽ thay đổi theo biến động giá.",
+  "soRealTimeMonitoring": "Vì vậy, theo dõi thời gian thực lãi lỗ của bạn là rất quan trọng. Bằng cách theo dõi tình hình, bạn có thể thêm hoặc đóng các vị trí ngay lập tức khi cần thiết.",
+  "closeYourPosition": "Đóng vị trí của bạn",
+  "itIsExtremelyImportant": "Điều cực kỳ quan trọng đối với các nhà đầu tư FOREX là kịp thời đóng vị thế của họ khi xác định các giai đoạn khác nhau của chuyển động thị trường.",
+  "FailingToDoSo": "Không làm như vậy đôi khi sẽ gây tốn kém, đặc biệt là khi thị trường đi ngược lại với họ.",
+  "foreignExchangeQuotes": "Báo giá ngoại hối thường có năm chữ số thập phân. Trong số đó, chữ số thập phân thứ tư là chữ cần được chú ý nhiều nhất. Chúng tôi thường sử dụng pips để tính toán lãi và lỗ. Khối lượng giao dịch ngoại hối thường được tính bằng \"lô\", và 1 lô tương đương với 100.000 đơn vị tiền tệ cơ bản. Bạn cũng có thể giao dịch các đơn vị nhỏ hơn 1 lô, chẳng hạn như lô nhỏ hoặc lô nhỏ. Các lô nhỏ tương ứng với 10.000 đơn vị tiền tệ (0,1 ô) và lô nhỏ tương ứng với 1.000 đơn vị tiền tệ (0,01 ô).",
+  "supportLeverage": "Đòn bẩy hỗ trợ",
+  "youCanUtilizeLeverage": "Bạn có thể sử dụng đòn bẩy để mở một vị thế lớn hơn số vốn của mình。 Cách tiếp cận này có thể dẫn đến nhiều lợi nhuận hoặc thua lỗ hơn。 Vì vậy， việc quản lý rủi ro khi thực hiện các giao dịch ngoại hối là vô cùng quan trọng.",
+  "fundingThreshold": "Ngưỡng tài trợ",
+  "whenTradingForeignExchange": "Khi giao dịch ngoại hối trực tuyến， bạn có thể quyết định quy mô các vị thế mở của mình。 Nạp một số tiền phù hợp tùy theo tình hình kinh tế của bản thân để tham gia giao dịch.",
+  "hoursTrading": "Giao dịch 24 giờ",
+  "fromMondayMorning": "Từ sáng thứ Hai đến sáng thứ Bảy， thị trường ngoại hối luôn mở cửa giao dịch。 Điều này làm cho thị trường ngoại hối trở thành thị trường giao dịch lý tưởng cho các nhà giao dịch nghiệp dư."
 }
