--- a/src/i18n/locales/vi/marketNews.json
+++ b/src/i18n/locales/vi/marketNews.json
@@ -1,12 +1,12 @@
 {
-  "economicCalendar": "Economic calendar about foreign exchange market and world news, published daily and weekly",
-  "weeklyForeignExchangeNews": "Weekly foreign exchange news from WCG and comprehensive world economic indicators",
-  "financialCalendar": "Financial Calendar",
-  "financialNews": "Financial News",
-  "marketAnalysis": "Market Analysis",
-  "todaysEconomic": "Today's economic news",
-  "theMostImportant": "The most important economic and financial news related to the international currency and stocks market",
-  "theLatestReview": "The latest review of market analysis and news",
-  "theLatestReviewsAndForecasts": "The latest reviews and forecasts of all market tools and economic news. These materials are provided by professional analysts and are not used for direct guidance.",
-  "more": "More"
+  "economicCalendar": "Lịch kinh tế về thị trường ngoại hối và tin tức thế giới， xuất bản hàng ngày và hàng tuần",
+  "weeklyForeignExchangeNews": "Tin tức ngoại hối hàng tuần từ WCG và các chỉ số kinh tế thế giới toàn diện",
+  "financialCalendar": "Lịch tài chính",
+  "financialNews": "Tin tức tài chính",
+  "marketAnalysis": "Phân tích thị trường",
+  "todaysEconomic": "Tin tức kinh tế hôm nay",
+  "theMostImportant": "Tin tức kinh tế và tài chính quan trọng nhất liên quan đến thị trường chứng khoán và tiền tệ quốc tế",
+  "theLatestReview": "Đánh giá mới nhất về phân tích thị trường và tin tức",
+  "theLatestReviewsAndForecasts": "Các đánh giá và dự báo mới nhất về tất cả các công cụ thị trường và tin tức kinh tế。 Các tài liệu này được cung cấp bởi các nhà phân tích chuyên nghiệp và không được sử dụng để hướng dẫn trực tiếp.",
+  "more": "Xem thêm"
 }
