--- a/src/i18n/locales/vi/preciousMetals.json
+++ b/src/i18n/locales/vi/preciousMetals.json
@@ -1,46 +1,46 @@
 {
-  "howToTradePreciousMetals": "How to trade precious metals",
-  "forThoseTraders": "For those traders who are interested in balancing their investment portfolios, precious metals trading is an important component, because precious metals are regarded as a hedging asset that can prevent inflation. In WCG, precious metals are quoted in US dollars.",
-  "thisMeansThatWhenTradingGold": "This means that when trading gold, you are speculating whether the price of an ounce of gold will rise or fall against the US dollar. We assume that the current price of gold is $1,300.60. You think the price may rise in the future, so you buy 100 ounces (1 lot) of gold (code XAU/USD).",
-  "whenThePriceRisesTo": "When the price rises to 1305.80, you decide to close the trade. Your profit is the difference between the opening price and closing price multiplied by the number of ounces you trade. In this transaction, your profit is $520.",
-  "viewTradingProducts": "View Trading Products",
-  "diversifiedInvestment": "Diversified investment",
-  "justAsExperiencedInvestors": "Just as experienced investors like large institutions, tend to diversify their investment portfolios to reduce risks and increase returns. Gold trading is considered an excellent way to diversify your portfolio, because the price of gold is often inversely correlated with the stock market.",
-  "fightAgainstInflation": "Fight against inflation",
-  "asInflationIntensifies": "As inflation intensifies, currency will depreciate over time, and gold is more valuable than currency while facing inflation. Even in 2008 when the global market fell into recession, gold prices were hardly affected. In fact, from 2007 to 2008, the price of gold rose by about 4%.",
-  "highStorageValue": "High storage value",
-  "about95OfTheWorldsGold": "About 95% of the world's gold is held as jewelry or under gold vaults. Compared with the amount of gold hoarded, the supply of gold has grown at a very low rate every year. Therefore, the price of gold has been rising for the past 50 years.",
-  "preciousMetalsAreDifficultToMine": "Precious metals are difficult to mine, resulting in their scarcity and high prices. This is why people call these metals \"precious\" metals.",
-  "amongAllPreciousMetals": "Among all precious metals, gold is the most popular among traders. Gold provides a lot of trading opportunity for online traders. This is mainly because gold is unique and its position in the world economy is unique.",
-  "participantsInGoldTrading": "Participants in gold trading",
-  "theGoldMarketAttracts": "The gold market attracts a large number of traders. Most of them are looking for safe and profitable investment options to achieve sustainable wealth growth or to avoid the risks brought by other investments. This is why gold is so attractive. Participants in the gold market can be divided into the following two categories:",
-  "goldBelievers": "Gold believers",
-  "mainlyIncludeIndividualInvestors": "Mainly include individual investors and gold traders. Gold believers account for a huge proportion of the entire gold market. These people are fundamentally optimistic about this expensive commodity and allocate a large amount of assets to gold. A large number of retail players in the market are of this type. They often hold long-term positions and inject a large amount of liquidity into the gold market through continued purchase intentions.",
-  "largeInstitutions": "Large institutions",
-  "suchInstitutionsIncludeHedgeFunds": "Such institutions include hedge funds, banks, and brokerage companies involved in buying and selling gold. Most of these institutions use sophisticated calculation strategies to develop a diversified trading portfolio to provide customers with safe investment protection in a highly unstable market environment. Most of these institutions did not stick to gold trading. They often include other investment options in their portfolios.",
-  "reasonsAffectingThePriceOfGold": "Reasons affecting the price of gold",
-  "thereAreManyFactors": "There are many factors that affect the price of gold. The following is a brief overview of the influencing factors",
-  "centralBank": "Central Bank",
-  "theseInstitutions": "These institutions participate in gold trading in order to regulate their foreign exchange reserves to stabilize the value of their currency. Therefore, the price of gold has been pushed up accordingly.",
-  "crudeOil": "Crude oil",
-  "crudeOilAndGold": "Crude oil and gold are closely linked because they are also priced in US dollars. In addition, the increase in crude oil prices will also increase inflation, which in turn will increase the price of gold.",
-  "USDollars": "U.S. Dollars",
-  "sinceGoldIsPriced": "Since gold is priced in U.S. dollars, when the value of U.S. dollars rises, it will naturally create downward pressure on gold prices.",
-  "stockMarket": "Stock Market",
-  "whenTheStockMarket": "When the stock market falls, traders often turn to buy gold, thereby boosting the price of gold.",
-  "historicalGoldPrice": "Historical gold price",
-  "theFollowingTable": "The following table shows the price fluctuations of gold in the past 50 years. All in all, since 1970, the price of gold has been rising sharply.",
-  "duringThisPeriod": "During this period, the lowest return on investment in gold occurred between 1970 and 1979.",
-  "onTheOtherHand": "On the other hand, the largest increase occurred between 2000 and 2009.",
-  "goldTradingExample": "Gold trading example",
-  "practicalGoldTrading": "Practical gold trading",
-  "supposeYouStudyTheGoldMarket": "Suppose you study the gold market and believe that the price of gold will rise. Therefore, you bought 1 lot of gold (that is, 100 ounces) at a price of 1,184.60.",
-  "thisMeans": "This means that when the price of gold changes by 1 US dollar, the profit and loss brought to you is 100 US dollars.",
-  "profitScenario": "Profit scenario",
-  "peoplesInterestInGoldSurged": "People's interest in gold surged, and a few days later, the price of gold reached $1,189.70. You decide to close the position and lock in profit.",
-  "yourTotalProfitIsCalculated": "Your total profit is calculated as follows: (1,189.70 – 1,184.60) x 100 USD = 510 USD.",
-  "lossScenario": "Loss scenario",
-  "thePriceOfGold": "The price of gold did not rise as expected, but fell to 1,180.30 US dollars. You decide to close the position and settle the loss.",
-  "theLossInThisCase": "The loss in this case is: (1,184.60-1,180.30) x 100 USD = 430 USD.",
-  "althoughGoldTrading": "Although gold trading is the most common precious metal trading, traders who are aware of the diversified trading value of gold often explore other metal markets, such as silver."
+  "howToTradePreciousMetals": "Cách giao dịch kim loại quý",
+  "forThoseTraders": "Đối với những nhà giao dịch quan tâm đến việc cân bằng danh mục đầu tư của ， thì giao dịch kim loại quý là một thành phần quan trọng， vì kim loại quý được coi là tài sản phòng ngừa rủi ro có thể ngăn ngừa lạm phát。 Trong WCG， kim loại quý được tính bằng đô la Mỹ.",
+  "thisMeansThatWhenTradingGold": "Điều này có nghĩa là khi giao dịch vàng， bạn đang suy đoán xem giá một ounce vàng sẽ tăng hay giảm so với đô la Mỹ。 Chúng tôi giả định rằng giá vàng hiện tại là 1.300，60 đô la。 Bạn nghĩ rằng giá có thể tăng trong tương lai， vì vậy bạn mua 100 ounce (1 lô) vàng (mã XAU / USD).",
+  "whenThePriceRisesTo": "Khi giá tăng lên 1305.80， bạn quyết định đóng giao dịch。 Lợi nhuận của bạn là chênh lệch giữa giá mở cửa và giá đóng cửa nhân với số ounce bạn giao dịch。 Trong giao dịch này， lợi nhuận của bạn là $ 520",
+  "viewTradingProducts": "Xem Sản phẩm Giao dịch",
+  "diversifiedInvestment": "Đầu tư đa dạng",
+  "justAsExperiencedInvestors": "Cũng giống như các nhà đầu tư có kinh nghiệm như các tổ chức lớn， có xu hướng đa dạng hóa danh mục đầu tư của họ để giảm rủi ro và tăng lợi nhuận。 Kinh doanh vàng được coi là một cách tuyệt vời để đa dạng hóa danh mục đầu tư của bạn， bởi vì giá vàng thường tương quan nghịch với thị trường chứng khoán.",
+  "fightAgainstInflation": "Chống lạm phát",
+  "asInflationIntensifies": "Khi lạm phát gia tăng， tiền tệ sẽ mất giá theo thời gian， và vàng có giá trị hơn tiền tệ trong khi đối mặt với lạm phát。 Ngay cả trong năm 2008 khi thị trường toàn cầu rơi vào suy thoái， giá vàng hầu như không bị ảnh hưởng。 Trên thực tế， từ năm 2007 đến năm 2008， giá vàng đã tăng khoảng 4%.",
+  "highStorageValue": "Giá trị lưu trữ cao",
+  "about95OfTheWorldsGold": "Khoảng 95% vàng trên thế giới được giữ dưới dạng đồ trang sức hoặc dưới các hầm chứa vàng。 So với lượng vàng tích trữ， nguồn cung vàng tăng trưởng rất thấp hàng năm。 Do đó， giá vàng đã tăng trong 50 năm qua.",
+  "preciousMetalsAreDifficultToMine": "Kim loại quý rất khó khai thác， dẫn đến sự khan hiếm và giá cao。 Đây là lý do tại sao người ta gọi những kim loại này là kim loại \"quý\".",
+  "amongAllPreciousMetals": "Trong số tất cả các kim loại quý， vàng là phổ biến nhất cho các nhà giao dịch。 Vàng cung cấp rất nhiều cơ hội giao dịch cho các nhà giao dịch trực tuyến Điều này chủ yếu là do vàng là duy nhất và vị trí của nó trong nền kinh tế thế giới là duy nhất.",
+  "participantsInGoldTrading": "Người tham gia kinh doanh vàng",
+  "theGoldMarketAttracts": "Thị trường vàng thu hút một lượng lớn nhà đầu tư。 Hầu hết họ đang tìm kiếm các lựa chọn đầu tư an toàn và sinh lời để đạt được sự tăng trưởng tài sản bền vững hoặc để tránh những rủi ro do các khoản đầu tư khác mang lại。 Đây là lý do tại sao vàng rất hấp dẫn。 Những người tham gia thị trường vàng có thể được chia thành hai loại sau:",
+  "goldBelievers": "Tín đồ vàng",
+  "mainlyIncludeIndividualInvestors": "Chủ yếu bao gồm các nhà đầu tư cá nhân và các nhà kinh doanh vàng。 Tín đồ vàng chiếm tỷ trọng rất lớn trong toàn bộ thị trường vàng。 Những người này về cơ bản lạc quan về mặt hàng đắt đỏ này và phân bổ một lượng lớn tài sản cho vàng。 Một số lượng lớn người chơi bán lẻ trên thị trường thuộc loại này。 Họ thường nắm giữ các vị thế dài hạn và bơm một lượng lớn thanh khoản vào thị trường vàng thông qua các ý định tiếp tục mua.",
+  "largeInstitutions": "Các tổ chức lớn",
+  "suchInstitutionsIncludeHedgeFunds": "Các tổ chức này bao gồm các quỹ đầu cơ， ngân hàng và các công ty môi giới liên quan đến việc mua và bán vàng。 Hầu hết các tổ chức này sử dụng các chiến lược tính toán phức tạp để phát triển danh mục đầu tư giao dịch đa dạng nhằm cung cấp cho khách hàng sự bảo vệ đầu tư an toàn trong môi trường thị trường không ổn định cao。 Hầu hết các tổ chức này không gắn bó với kinh doanh vàng。 Mà bao gồm các lựa chọn đầu tư khác trong danh mục đầu tư của mình.",
+  "reasonsAffectingThePriceOfGold": "Lý do ảnh hưởng đến giá vàng",
+  "thereAreManyFactors": "Có rất nhiều yếu tố ảnh hưởng đến giá vàng。 Sau đây là tổng quan ngắn gọn về các yếu tố ảnh hưởng",
+  "centralBank": "Ngân hàng trung ương",
+  "theseInstitutions": "Các tổ chức này tham gia kinh doanh vàng để điều tiết dự trữ ngoại hối nhằm ổn định giá trị đồng tiền của họ。 Do đó， giá vàng cũng bị đẩy lên theo.",
+  "crudeOil": "Dầu thô",
+  "crudeOilAndGold": "Dầu thô và vàng có mối liên hệ chặt chẽ vì chúng cũng được định giá bằng đô la Mỹ。 Ngoài ra， giá dầu thô tăng cũng sẽ làm tăng lạm phát， từ đó làm tăng giá vàng.",
+  "USDollars": "Đô la Mỹ",
+  "sinceGoldIsPriced": "Vì vàng được định giá bằng đô la Mỹ nên khi giá trị của đô la Mỹ tăng lên sẽ tự nhiên tạo ra áp lực giảm giá vàng.",
+  "stockMarket": "Thị trường chứng khoán",
+  "whenTheStockMarket": "Khi thị trường chứng khoán giảm， các nhà kinh doanh thường chuyển sang mua vàng， từ đó đẩy giá vàng lên.",
+  "historicalGoldPrice": "Lịch sử giá vàng",
+  "theFollowingTable": "Bảng sau đây cho thấy biến động giá vàng trong 50 năm qua. Nói chung, kể từ năm 1970, giá vàng đã tăng mạnh.",
+  "duringThisPeriod": "Trong thời kỳ này, lợi tức đầu tư vào vàng thấp nhất xảy ra từ năm 1970 đến năm 1979.",
+  "onTheOtherHand": "Mặt khác, mức tăng lớn nhất xảy ra từ năm 2000 đến năm 2009.",
+  "goldTradingExample": "Ví dụ kinh doanh vàng",
+  "practicalGoldTrading": "Kinh doanh vàng thực tế",
+  "supposeYouStudyTheGoldMarket": "Giả sử bạn nghiên cứu thị trường vàng và tin rằng giá vàng sẽ tăng. Do đó, bạn đã mua 1 lượng vàng (nghĩa là 100 ounce) ở mức giá 1.184,60.",
+  "thisMeans": "Điều này có nghĩa là khi giá vàng thay đổi 1 đô la Mỹ, lãi và lỗ mang lại cho bạn là 100 đô la Mỹ.",
+  "profitScenario": "Kịch bản lợi nhuận",
+  "peoplesInterestInGoldSurged": "Mối quan tâm của người dân đối với vàng tăng vọt, và vài ngày sau, giá vàng đạt 1.189,70 USD. Bạn quyết định đóng vị thế và chốt lời.",
+  "yourTotalProfitIsCalculated": "Tổng lợi nhuận của bạn được tính như sau: (1.189,70 - 1.184,60) x 100 USD = 510 USD.",
+  "lossScenario": "Kịch bản thua lỗ",
+  "thePriceOfGold": "Giá vàng không tăng như dự đoán mà giảm xuống 1.180,30 đô la Mỹ. Bạn quyết định đóng vị thế và giải quyết khoản lỗ.",
+  "theLossInThisCase": "Khoản lỗ trong trường hợp này là: (1.184,60-1.180,30) x 100 USD = 430 USD.",
+  "althoughGoldTrading": "Mặc dù giao dịch vàng là giao dịch kim loại quý phổ biến nhất, nhưng các thương nhân nhận thức được giá trị giao dịch đa dạng của vàng thường khám phá các thị trường kim loại khác, chẳng hạn như bạc."
 }
