--- a/src/i18n/locales/zh/conditions.json
+++ b/src/i18n/locales/zh/conditions.json
@@ -1,7 +1,7 @@
 {
   "privacyPolicy": "隱私條款",
   "theCustomers": "客戶的個人資料按實際情況和需要會被用作以下用途：",
-  "theVerificationProcedures": "執行客戶指示或回复客戶有關的查詢的核證程序、賬戶的日常行政管理或相關投資產品或服務的直接或間接市場推廣，與WCG的聯屬或關連公司就相關投資或交易服務共享、反覆查證及轉移該等個人資料。",
+  "theVerificationProcedures": "執行客戶指示或回复客戶有關的查詢的核證程序、帳戶的日常行政管理或相關投資產品或服務的直接或間接市場推廣，與WCG的聯屬或關連公司就相關投資或交易服務共享、反覆查證及轉移該等個人資料。",
   "dealWithCustomers": "處理客戶抵押品，或向追收客戶欠款。",
   "transferSuchPersonalData": "將該等個人資料轉移予第三者服務供應商作信貸查證及／或核證數據用途。",
   "toProvideAny": "關於或有關遵守任何法律、規例、法令或監管機構的命令的任何用途而提供任何該等數據。",
