--- a/src/i18n/locales/zh/header.json
+++ b/src/i18n/locales/zh/header.json
@@ -19,7 +19,7 @@
   "MT4PCDownload": "MT4電腦版下載",
   "MT4APPDownload": "MT4 APP版下載",
   "MAMSystem": "MAM多帳號管理系統",
-  "notice": "交易需知",
+  "notice": "交易須知",
   "abnormalTrade": "異常交易",
   "tradeDetails": "交易細則",
   "learnTrade": "學習交易",
