--- a/src/i18n/locales/zh/notice.json
+++ b/src/i18n/locales/zh/notice.json
@@ -4,7 +4,7 @@
   "abnormalTradeMeans": "異常交易意旨客戶於極短時間內進行密集式交易，總結行內經驗，短線交易最終對客戶並沒有任何益處，因為客戶須為頻密的交易付出巨大的手續費。同時短線交易亦非正確的投資方法，客戶無法在交易中獲得較大的利潤。另外，亦有不法之徒意圖利用異常交易進行洗黑錢活動，本公司特別關注此等不法活動，任何有機會觸犯“防止洗黑錢”條例的異常交易，本公司是絕對不會容許的！",
   "abnormalTradeTakesUp": "異常交易會大量占用網路資源，除了會影響交易系統的穩定性及效率，更會妨礙一般客戶的交易。為保障大部分客戶的利益情況下，本公司絕不能接受異常交易行為繼續发生。",
   "theDefinitionOfAbnormalTrades": "異常交易的定義",
-  "whenTheCustomerWithdrawsMoney": "當客戶取款時，我們會審核客戶上次取款（首次取款則從開戶開始）至本次取款的所有交易，按照交易量統計，當交易單中有50%交易量的持倉時間低於5分鐘時，我們就會對此賬戶進行進一步審核，審核時間需要延長3小時。",
+  "whenTheCustomerWithdrawsMoney": "當客戶取款時，我們會審核客戶上次取款（首次取款則從開戶開始）至本次取款的所有交易，按照交易量統計，當交易單中有50%交易量的持倉時間低於5分鐘時，我們就會對此帳戶進行進一步審核，審核時間需要延長3小時。",
   "whenThereIs": "當疑似異常交易的交易單中有30%交易量的持倉時間低於5分鐘時。",
   "when30OfThe": "當疑似異常交易的交易單中有30%交易量屬於5分鐘內建立的對沖鎖倉單。",
   "whenClientIsUsing": "客戶使用同一帳戶並同時利用多台電腦終端機進行交易行為，意圖以＂密集式交易＂手段令市場造成巨大成交額的誤導資訊。",
@@ -27,6 +27,6 @@
   "setTheValidityPeriodOfTheOrder": "訂單設置有效期",
   "allPendingOrders": "所有掛單及止損獲利設置的有效期為1週，在週末休市前，所有未建倉的掛單及未執行的止損或獲利設置將全部取消。如有需要，客戶可在週一開市後重新設置。",
   "forcedLiquidationPolicy": "強制平倉條款",
-  "pleaseNoteThatUnlessWeHaveOtherNotice": "請注意，除非另有通知，WCG強平保證金水平為30%。當您的保證金比例低於30%時，系統會自動將您的訂單進行平倉。請客戶時刻留意賬戶內的資金水平，避免不必要的損失。",
+  "pleaseNoteThatUnlessWeHaveOtherNotice": "請注意，除非另有通知，WCG強平保證金水平為30%。當您的保證金比例低於30%時，系統會自動將您的訂單進行平倉。請客戶時刻留意帳戶內的資金水平，避免不必要的損失。",
   "theCalculationMethod": "保證金比例計算方式為 : 凈值 ÷ 已用預付款 = 保證金比例"
 }
