--- a/src/i18n/locales/cn/header.json
+++ b/src/i18n/locales/cn/header.json
@@ -19,7 +19,7 @@
   "MT4PCDownload": "MT4电脑版下载",
   "MT4APPDownload": "MT4 APP版下载",
   "MAMSystem": "MAM多帐号管理系统",
-  "notice": "交易需知",
+  "notice": "交易须知",
   "abnormalTrade": "异常交易",
   "tradeDetails": "交易细则",
   "learnTrade": "学习交易",
