--- a/src/i18n/locales/cn/platform.json
+++ b/src/i18n/locales/cn/platform.json
@@ -35,7 +35,7 @@
   "compatibleWithExpertAdvisors": "兼容EA交易(智慧自动交易程式)、自定指标及其他应用工具",
   "itHasAMobileVersion": "拥有手机版交易平台，可用手机APP随时随地进行交易、管理订单",
   "provideAnAdvanced": "提供先进的通知信号系统",
-  "downloadTheWCGMT4": "立即下载WCG MT4交易平台，",
+  "downloadTheWCGMT4": "立即下载WCG MT4交易平台",
   "usingMT4AllowsYou": "使用 MT4 让您能更精准地监控市场，快速又高效地管您的仓位，优化交易策略，提升您你的交易优势，享受完美的交易体验。",
   "tradingSystem": "交易系统",
   "includesCurrentPriceExecution": "包括现价成交，以及买卖双向交易，四种挂单和二种止损单和追踪止损功能。一键交易功能可以使您从图表上一次点击即可直接發送交易命令。内置的报价图表提供了准确的判断交易时机的方法。",
