--- a/src/i18n/locales/in/uSShareCFD.json
+++ b/src/i18n/locales/in/uSShareCFD.json
@@ -1,28 +1,28 @@
 {
-  "tradeSharesCFDs": "Trade Shares CFDs",
-  "WCGOffersAWideRange": "WCG offers a wide range of CFD shares across its online trading platform. Start trading now to benefit from competitive spreads, high quality trade execution, and no commission. Please be reminded that your capital is at risk",
-  "viewTradingProducts": "View Trading Products",
-  "whyTradeSharesWithWCG": "Why trade Shares with WCG",
-  "competitivePrices": "Competitive Prices We source our prices from multiple venues to ensure you get the best prices for CFD trading.",
-  "tradeShortAndLong": "Trade Short and Long Take up a long or short position when trading with CFDs and make potential gains from price movements.",
-  "tradeShares": "Trade Shares on Leverage Gain full exposure with a relatively small deposit when you trade CFD stocks with WCG.",
-  "WCGOffersZeroCommission": "WCG offers zero commission when trading CFD shares. That, combined with zero bank fees charged on transactions results in more profitable trading.",
-  "howDoITradeCFDShares": "How do I trade CFD Shares with WCG ?",
-  "whenTradingASingleCFDShare": "When trading a single CFD share there will be corporate actions enforced by the related company. An example of this is a cash dividend. If this has been issued then WCG will adjust the client’s account accordingly. WCG will take two actions:",
-  "clientsWhoHoldBUY": "Clients who hold BUY position(s) in a single share CFD on the ex-dividend date, will receive a positive cash amount which is equivalent to the dividend payout. (Deposits will be made into the client’s trading account according to their lot size and proportion of the dividend paying underlying securities).",
-  "ClientsWhoHoldSELL": "Clients who hold SELL position(s) in a single share CFD on the ex-dividend date, will receive a cash amount which is equivalent to the dividend payout. (Withdrawal will be made from the client’s trading account according to their lot size and proportion of the dividend paying underlying securities.)",
-  "adjustmentFormula": "Adjustment Formula :Number of shares x Dividend per share = Adjustment amount",
-  "cashDividend": "Cash Dividend",
-  "forExample": "For example, if Apple Inc. (AAPL) announces a $0.01 USD cash dividend to its shareholders. On the ex-dividend date, Apple Inc.’s share price would reflect the corporate action and would drop $0.01 in price. WCG will make cash adjustments to clients who are holding open positions of the Apple Inc. CFD .",
-  "ifAnIndividualClient": "If an individual client of WCG is holding 10,000 shares of BUY positions, the cash adjustment will be calculated using the following equation :10,000 share CFDs x 0.01USD = 100USD cash dividend (Note: If a client is holding 10,000 shares of SELL positions, WCG will deduct 100USD from the client’s account.)",
-  "shareSplitOrReserveShareSplit": "Share Split or Reserve Share Split",
-  "ifACompanyAnnounces": "If a company announces a share split or reserve share split, the company's share price will be subject to significant change.",
-  "reserveShareSplit": "Reserve Share Split: CFD price will increase",
-  "shareSplit": "Share Split :CFD price will decrease",
-  "openPositions": "Open positions of the Apple Inc CFD. Should this not just say clients who are holding open positions of the relevant CFD?",
-  "however": "However, a single share CFD will also be affected by corporate action, which may occur when the listed company initiates any business changes Like a share split, reserve share split, or a dividend payout, etc., and as a result may affect the company's financial position, its share price performance, and the interests of shareholders.",
-  "dividends": "Dividends",
-  "aListedCompany": "A listed company will announce its earnings reports semi-annually (or quarterly). Dividends are subject to approval by a company's board of directors, and It's a distribution of a company's earnings to a specified class of its shareholders. Generally, dividends will be issued in the form of cash dividends or share dividends.",
-  "exDividendDate": "Ex-dividend Date",
-  "anExDividendIs": "An ex-dividend is a share trading term that specifies when a declared dividend is owned by the buyer, as opposed to the seller. If an individual buys a share before the ex-dividend day, he or she is then entitled to receive a dividend. If an individual buys a share on or after the ex-dividend date, the buyer no longer had the right to receive the dividend."
+  "tradeSharesCFDs": "Perdagangkan CFD Saham",
+  "WCGOffersAWideRange": "WCG menawarkan berbagai macam saham CFD di seluruh platform perdagangan online-nya. Mulai trading sekarang untuk mendapatkan keuntungan dari spread yang kompetitif, eksekusi trading berkualitas tinggi, dan tanpa komisi. Harap diingatkan bahwa modal Anda berisiko",
+  "viewTradingProducts": "Lihat Produk Perdagangan",
+  "whyTradeSharesWithWCG": "Mengapa memperdagangkan Saham dengan WCG",
+  "competitivePrices": "Harga Kompetitif Kami mendapatkan harga kami dari berbagai tempat untuk memastikan Anda mendapatkan harga terbaik untuk perdagangan CFD.",
+  "tradeShortAndLong": "Trading Short dan Long Ambil posisi long atau short saat trading dengan CFD dan dapatkan keuntungan potensial dari pergerakan harga.",
+  "tradeShares": "Perdagangkan Saham dengan Leverage Dapatkan eksposur penuh dengan deposit yang relatif kecil saat Anda memperdagangkan saham CFD dengan WCG.",
+  "WCGOffersZeroCommission": "WCG menawarkan komisi nol saat memperdagangkan saham CFD. Itu, dikombinasikan dengan nol biaya bank yang dibebankan pada transaksi menghasilkan perdagangan yang lebih menguntungkan.",
+  "howDoITradeCFDShares": "Bagaimana cara saya memperdagangkan Saham CFD dengan WCG?",
+  "whenTradingASingleCFDShare": "Saat memperdagangkan satu saham CFD akan ada aksi korporasi yang diberlakukan oleh perusahaan terkait. Contohnya adalah dividen tunai. Jika ini telah diterbitkan maka WCG akan menyesuaikan akun klien sesuai dengan itu. WCG akan mengambil dua tindakan:",
+  "clientsWhoHoldBUY": "Klien yang memegang posisi BELI dalam satu CFD saham pada tanggal ex-dividend, akan menerima jumlah tunai positif yang setara dengan pembayaran dividen. (Setoran akan dilakukan ke akun perdagangan klien sesuai dengan ukuran lot dan proporsi sekuritas yang membayar dividen).",
+  "ClientsWhoHoldSELL": "Klien yang memegang posisi JUAL dalam satu CFD saham pada tanggal ex-dividend, akan menerima jumlah uang tunai yang setara dengan pembayaran dividen. (Penarikan akan dilakukan dari akun perdagangan klien sesuai dengan ukuran lot dan proporsi sekuritas yang membayar dividen).",
+  "adjustmentFormula": "Rumus Penyesuaian :Jumlah Saham x Dividen per Saham = Jumlah Penyesuaian",
+  "cashDividend": "Dividen Tunai",
+  "forExample": "Misalnya, jika Apple Inc. (AAPL) mengumumkan dividen tunai $0,01 USD kepada pemegang sahamnya. Pada tanggal ex-dividen, harga saham Apple Inc. akan mencerminkan aksi korporasi dan akan turun harga $0,01. WCG akan melakukan penyesuaian tunai kepada klien yang memegang posisi terbuka CFD Apple Inc.",
+  "ifAnIndividualClient": "Jika klien individu WCG memegang 10.000 saham posisi BELI, penyesuaian tunai akan dihitung menggunakan persamaan berikut :10.000 saham CFD x 0,01USD = 100USD dividen tunai (Catatan: Jika klien memegang 10.000 saham posisi JUAL, WCG akan memotong 100USD dari akun klien).",
+  "shareSplitOrReserveShareSplit": "Bagikan Bagikan atau Reservasi Bagi Bagikan",
+  "ifACompanyAnnounces": "Jika suatu perusahaan mengumumkan pemecahan saham atau pemecahan saham cadangan, harga saham perusahaan akan mengalami perubahan yang signifikan.",
+  "reserveShareSplit": "Reserve Share Split: Harga CFD akan naik",
+  "shareSplit": "Bagi Hasil : Harga CFD akan turun",
+  "openPositions": "Buka posisi CFD Apple Inc. Bukankah ini hanya mengatakan klien yang memegang posisi terbuka dari CFD yang relevan?",
+  "however": "Namun, CFD saham tunggal juga akan terpengaruh oleh aksi korporasi, yang dapat terjadi ketika perusahaan yang terdaftar memulai perubahan bisnis seperti pemecahan saham, pemecahan saham cadangan, atau pembayaran dividen, dll., dan akibatnya dapat mempengaruhi laba perusahaan. posisi keuangan, kinerja harga saham, dan kepentingan pemegang saham.",
+  "dividends": "Dividen",
+  "aListedCompany": "Perusahaan yang terdaftar akan mengumumkan laporan pendapatannya setiap semester (atau triwulanan). Dividen harus disetujui oleh dewan direksi perusahaan, dan Ini adalah distribusi pendapatan perusahaan kepada kelas pemegang saham tertentu. Umumnya, dividen yang akan dikeluarkan dalam bentuk dividen tunai atau dividen saham.",
+  "exDividendDate": "Tanggal Ex-dividen",
+  "anExDividendIs": "Ex-dividend adalah istilah perdagangan saham yang menentukan kapan dividen yang diumumkan dimiliki oleh pembeli, bukan penjual. Jika seseorang membeli saham sebelum hari ex-dividend, maka dia berhak menerima dividen. Jika seseorang membeli saham pada atau setelah tanggal ex-dividend, pembeli tidak lagi memiliki hak untuk menerima dividen."
 }
