--- a/src/i18n/locales/ms/crudeOil.json
+++ b/src/i18n/locales/ms/crudeOil.json
@@ -1,36 +1,36 @@
 {
-  "crudeOil": "Crude Oil",
-  "crudeOilIsNotOnly": "Crude oil is not only a highly sought-after commodity in the world, but also a must for economic activities in energy supply, industrial, and transportation use.",
-  "viewTradingProducts": "View Trading Products",
-  "howToTradeCommodities": "How to trade commodities",
-  "crudeOilAndNaturalGas": "Crude oil and natural gas are the most popular commodities. They generate huge trading volume at all times, providing online traders with numerous trading opportunities. Whether it is US crude oil (WTI), Brent crude oil (BRENT) or natural gas (NATGAS), energy commodities are quoted in US dollars.",
-  "whenYouAreTradingEnergy": "When you are trading energy CFDs, the exchange rate with the u.s dollar is a key factor to keep an eye on. Our bulk commodities offer both \"buy\" and \"sell\" prices. The difference between the buying price and the selling price is called \"spread\".",
-  "supposeYouThinkThat": "Suppose you think that the price of WTI crude oil will rise, so you buy 1 lot of WTI at a price of $54.17. This means that when the market moves in the direction you expect, for every 0.01 change in the price, your profit is $1.",
-  "basicKnowledgeOfCrudeOil": "Basic knowledge of crude oil",
-  "crudeOilIsUsedInManufacturing": "Crude oil is used in manufacturing, transportation and energy production. Its supply is variable and its storage capacity is limited, which has a huge impact on the global economy. Crude oil is very popular among traders. Its supply and demand are constantly changing, so there will always be price fluctuations and high liquidity.",
-  "youDoNotNeedTo": "You do not need to deal with large amounts of crude oil to conduct oil market transactions. Because most oil and gas transactions are realized through futures.",
-  "typesOfCrudeOilTransactions": "Types of crude oil transactions",
-  "likeStocks": "Like stocks, crude oil is also traded on exchanges. But unlike stocks, they are traded on the basis of crude oil. The forms of crude oil mined all over the world are not exactly the same. Through crude oil benchmarks, traders can quickly identify the quality of the oil they buy and the location of the drilling. The crude oil spot price represents the cost of buying or selling crude oil and delivering it immediately or on the spot (rather than delivering it on a set date in the future). Therefore, the futures price reflects the market's belief that the value of crude oil when it expires in the future, and the spot price reflects the current value of crude oil.",
+  "crudeOil": "Minyak mentah",
+  "crudeOilIsNotOnly": "Minyak mentah bukan hanya komoditi yang sangat dicari di dunia, tetapi juga merupakan keharusan untuk kegiatan ekonomi dalam penggunaan tenaga, perindustrian, dan pengangkutan.",
+  "viewTradingProducts": "Lihat produk perdagangan",
+  "howToTradeCommodities": "Cara perdagangan komoditi",
+  "crudeOilAndNaturalGas": "Minyak mentah dan gas asli adalah komoditi yang paling popular. Mereka menghasilkan jumlah perdagangan yang besar setiap masa, memberikan peluang perdagangan kepada peniaga dalam talian. Sama ada minyak mentah AS (WTI), minyak mentah Brent (BRENT) atau gas asli (NATGAS), komoditi tenaga dinyatakan dalam dolar AS.",
+  "whenYouAreTradingEnergy": "Semasa anda memperdagangkan CFD tenaga, kadar pertukaran dengan dolar AS adalah faktor utama yang perlu diperhatikan. Komoditi pukal kami menawarkan harga \"beli\" dan \"jual\". Perbezaan antara harga beli dan harga jual disebut \"spread\".",
+  "supposeYouThinkThat": "Andaikan anda berpendapat bahawa harga minyak mentah WTI akan naik, jadi anda membeli 1 lot WTI pada harga $ 54.17. Ini bermaksud bahawa ketika pasaran bergerak ke arah yang anda harapkan, untuk setiap perubahan dalam 0.01 harga, keuntungan anda adalah $ 1.",
+  "basicKnowledgeOfCrudeOil": "Pengetahuan asas mengenai minyak mentah",
+  "crudeOilIsUsedInManufacturing": "Minyak mentah digunakan dalam pembuatan, pengangkutan dan pengeluaran tenaga. Penawarannya berubah-ubah dan kapasiti simpanannya terhad, yang memberi kesan besar kepada ekonomi global. Minyak mentah sangat popular di kalangan peniaga. Penawaran dan permintaannya sentiasa berubah, jadi akan selalu ada turun naik harga dan kecairan yang tinggi.",
+  "youDoNotNeedTo": "Anda tidak perlu berurusan dengan sejumlah besar minyak mentah untuk melakukan transaksi pasaran minyak. Kerana kebanyakan transaksi minyak dan gas dilaksanakan melalui niaga hadapan.",
+  "typesOfCrudeOilTransactions": "Jenis urus niaga minyak mentah",
+  "likeStocks": "Seperti saham, minyak mentah juga diperdagangkan di bursa. Tetapi tidak seperti saham, mereka diperdagangkan berdasarkan minyak mentah. Bentuk minyak mentah yang dilombong di seluruh dunia tidak sama. Melalui penanda aras minyak mentah, peniaga dapat dengan cepat mengenal pasti kualiti minyak yang mereka beli dan lokasi penggerudian. Harga spot minyak mentah mewakili kos membeli atau menjual minyak mentah dan menghantarnya dengan segera atau di tempat (daripada menyerahkannya pada tarikh yang ditetapkan di masa depan). Oleh itu, harga niaga hadapan mencerminkan kepercayaan pasaran bahawa nilai minyak mentah akan habis pada masa akan datang, dan harga spot menggambarkan nilai semasa minyak mentah.",
   "WTI": "West Texas Intermediate (WTI)",
-  "thisIsACrudeOilProduced": "This is a crude oil produced in the United States, also known as Texas Light Sweet Crude Oil. The so-called \"light\" means that it is less dense than most OPEC crude oils, while \"sweet\" means that it has a lower sulfur content.",
-  "BRENT": "Brent Crude Oil (BRENT)",
-  "brentCrudeOil": "Brent Crude Oil (BRENT), referred to as \"Brent\", is a kind of crude oil produced in the North Sea. Brent crude oil is also described as \"light sweet crude\", just like WTI.",
-  "majorAffectingCrudeOilPriceFactors": "Major affecting crude oil price factors",
-  "crudeOilIsOneOfTheMostTraded": "Crude oil is one of the most traded commodities in the world, and the crude oil market is undergoing new changes every day",
-  "extractionAndRefining": "Extraction and refining",
-  "crudeOilExtractionAndRefining": "Crude oil extraction and refining processes are expensive. Because oil reserves are located deep underground, extracting crude oil from underground requires a relatively huge price.",
-  "anyTechnologicalProgress": "Any technological progress or setbacks in the mining process have a direct impact on crude oil prices.",
-  "consumptionAndDemand": "Consumption and demand",
-  "theLargestConsumer": "The largest consumer of and demand for crude oil is the United States, followed by Japan, China, and European industrial countries such as Germany and the United Kingdom.",
-  "theIndustrialAndEconomicSectors": "The industrial and economic sectors of these countries have great demand for crude oil. Therefore, their demand will affect the global crude oil price.",
-  "availabilityAndSupply": "Availability and supply",
-  "noMatterHowTheSupplyChanges": "No matter how the supply changes, the availability of crude oil will be affected by political and economic factors. Rising inflation, unemployment and poverty rates may lead to a decline in consumption levels, making it impossible for those affected to afford certain products. Political unrest and rebellion may also lead to a reduction in crude oil imports and the smuggling of imported commodities.",
-  "naturalDisastersAndAccidents": "Natural disasters and accidents",
-  "naturalDisastersSuchAs": "Natural disasters such as earthquakes and hurricanes are unpredictable events. The losses to drilling sites and refineries caused by these disasters may hinder and delay crude oil production.",
-  "firesAndMechanicalFailures": "Fires and mechanical failures can also cause delays in production due to the need for time to recover. Delays caused by these environmental factors will reduce the supply of crude oil, leading to price increases.",
-  "youNeedToBeFamiliarWith": "You need to be familiar with and regularly review two crude oil reports",
-  "USDepartmentOfEnergy": "US Department of Energy's crude oil inventory report",
-  "theUSDepartmentOfEnergy": "The US Department of Energy's crude oil inventory report released every Wednesday. The report reflects the inventory of US crude oil. Since the United States is the largest consumer of crude oil, it is necessary for traders to analyze their demand by regularly understanding crude oil inventory.",
-  "OPEC": "OPEC Crude Oil Market Report",
-  "theCrudeOilReportYouShouldStudy": "The crude oil report you should study is the monthly and annual reports issued by OPEC. These reports provide a way for you to understand the production goals of OPEC member countries. Their production targets and quotas reflect the current level of crude oil supply and demand in the world market."
+  "thisIsACrudeOilProduced": "Ini adalah minyak mentah yang dihasilkan di Amerika Syarikat, juga dikenali sebagai Texas Light Sweet Crude Oil. Yang disebut \"cahaya\" bermaksud bahawa kurang padat daripada kebanyakan minyak mentah OPEC, sementara \"manis\" bermaksud ia mempunyai kandungan sulfur yang lebih rendah.",
+  "BRENT": "Minyak Mentah Brent (BRENT)",
+  "brentCrudeOil": "Minyak mentah Brent (BRENT), disebut sebagai \"Brent\", adalah sejenis minyak mentah yang dihasilkan di Laut Utara. Minyak mentah Brent juga digambarkan sebagai \"minyak mentah ringan\", sama seperti WTI.",
+  "majorAffectingCrudeOilPriceFactors": "Utama mempengaruhi faktor harga minyak mentah",
+  "crudeOilIsOneOfTheMostTraded": "Minyak mentah adalah salah satu komoditi yang paling banyak diperdagangkan di dunia, dan pasaran minyak mentah mengalami perubahan baru setiap hari",
+  "extractionAndRefining": "Pengekstrakan dan penapisan",
+  "crudeOilExtractionAndRefining": "Proses pengekstrakan dan penapisan minyak mentah adalah mahal. Oleh kerana simpanan minyak terletak jauh di bawah tanah, pengambilan minyak mentah dari bawah tanah memerlukan harga yang agak besar.",
+  "anyTechnologicalProgress": "Segala kemajuan teknologi atau kemunduran dalam proses perlombongan mempunyai kesan langsung terhadap harga minyak mentah.",
+  "consumptionAndDemand": "Penggunaan dan permintaan",
+  "theLargestConsumer": "Pengguna dan permintaan minyak mentah terbesar adalah Amerika Syarikat, diikuti oleh Jepun, China, dan negara industri Eropah seperti Jerman dan United Kingdom.",
+  "theIndustrialAndEconomicSectors": "Sektor industri dan ekonomi negara-negara ini mempunyai permintaan yang besar untuk minyak mentah. Oleh itu, permintaan mereka akan mempengaruhi harga minyak mentah global.",
+  "availabilityAndSupply": "Ketersediaan dan bekalan",
+  "noMatterHowTheSupplyChanges": "Tidak kira bagaimana bekalan berubah, ketersediaan minyak mentah akan dipengaruhi oleh faktor politik dan ekonomi. Kenaikan kadar inflasi, pengangguran dan kemiskinan dapat menyebabkan penurunan tahap penggunaan, sehingga mustahil bagi mereka yang terkena dampak untuk membeli produk tertentu. Kerusuhan dan pemberontakan politik juga dapat menyebabkan pengurangan import minyak mentah dan penyeludupan komoditi import.",
+  "naturalDisastersAndAccidents": "Bencana dan kemalangan alam",
+  "naturalDisastersSuchAs": "Bencana alam seperti gempa bumi dan taufan adalah kejadian yang tidak dapat diramalkan. Kerugian di lokasi pengeboran dan kilang yang disebabkan oleh bencana ini boleh menghalang dan melambatkan pengeluaran minyak mentah.",
+  "firesAndMechanicalFailures": "Kebakaran dan kegagalan mekanikal juga boleh menyebabkan kelewatan pengeluaran kerana memerlukan masa untuk pulih. Kelewatan yang disebabkan oleh faktor persekitaran ini akan mengurangkan bekalan minyak mentah, yang menyebabkan kenaikan harga.",
+  "youNeedToBeFamiliarWith": "Anda harus biasa dan kerap menyemak dua laporan minyak mentah",
+  "USDepartmentOfEnergy": "Laporan inventori minyak mentah Jabatan Tenaga AS",
+  "theUSDepartmentOfEnergy": "Laporan inventori minyak mentah Jabatan Tenaga AS dikeluarkan setiap hari Rabu. Laporan itu mencerminkan inventori minyak mentah AS. Oleh kerana Amerika Syarikat merupakan pengguna minyak mentah terbesar, perlu bagi peniaga untuk menganalisis permintaan mereka dengan memahami persediaan minyak mentah secara berkala.",
+  "OPEC": "Laporan Pasaran Minyak Mentah OPEC",
+  "theCrudeOilReportYouShouldStudy": "Laporan minyak mentah yang harus anda kaji adalah laporan bulanan dan tahunan yang dikeluarkan oleh OPEC. Laporan ini memberi jalan bagi anda untuk memahami matlamat pengeluaran negara anggota OPEC. Sasaran dan kuota pengeluaran mereka mencerminkan tahap penawaran dan permintaan minyak mentah semasa di pasaran dunia."
 }
