--- a/src/i18n/locales/vi/uSShareCFD.json
+++ b/src/i18n/locales/vi/uSShareCFD.json
@@ -1,28 +1,28 @@
 {
-  "tradeSharesCFDs": "Trade Shares CFDs",
-  "WCGOffersAWideRange": "WCG offers a wide range of CFD shares across its online trading platform. Start trading now to benefit from competitive spreads, high quality trade execution, and no commission. Please be reminded that your capital is at risk",
-  "viewTradingProducts": "View Trading Products",
-  "whyTradeSharesWithWCG": "Why trade Shares with WCG",
-  "competitivePrices": "Competitive Prices We source our prices from multiple venues to ensure you get the best prices for CFD trading.",
-  "tradeShortAndLong": "Trade Short and Long Take up a long or short position when trading with CFDs and make potential gains from price movements.",
-  "tradeShares": "Trade Shares on Leverage Gain full exposure with a relatively small deposit when you trade CFD stocks with WCG.",
-  "WCGOffersZeroCommission": "WCG offers zero commission when trading CFD shares. That, combined with zero bank fees charged on transactions results in more profitable trading.",
-  "howDoITradeCFDShares": "How do I trade CFD Shares with WCG ?",
-  "whenTradingASingleCFDShare": "When trading a single CFD share there will be corporate actions enforced by the related company. An example of this is a cash dividend. If this has been issued then WCG will adjust the client’s account accordingly. WCG will take two actions:",
-  "clientsWhoHoldBUY": "Clients who hold BUY position(s) in a single share CFD on the ex-dividend date, will receive a positive cash amount which is equivalent to the dividend payout. (Deposits will be made into the client’s trading account according to their lot size and proportion of the dividend paying underlying securities).",
-  "ClientsWhoHoldSELL": "Clients who hold SELL position(s) in a single share CFD on the ex-dividend date, will receive a cash amount which is equivalent to the dividend payout. (Withdrawal will be made from the client’s trading account according to their lot size and proportion of the dividend paying underlying securities.)",
-  "adjustmentFormula": "Adjustment Formula :Number of shares x Dividend per share = Adjustment amount",
-  "cashDividend": "Cash Dividend",
-  "forExample": "For example, if Apple Inc. (AAPL) announces a $0.01 USD cash dividend to its shareholders. On the ex-dividend date, Apple Inc.’s share price would reflect the corporate action and would drop $0.01 in price. WCG will make cash adjustments to clients who are holding open positions of the Apple Inc. CFD .",
-  "ifAnIndividualClient": "If an individual client of WCG is holding 10,000 shares of BUY positions, the cash adjustment will be calculated using the following equation :10,000 share CFDs x 0.01USD = 100USD cash dividend (Note: If a client is holding 10,000 shares of SELL positions, WCG will deduct 100USD from the client’s account.)",
-  "shareSplitOrReserveShareSplit": "Share Split or Reserve Share Split",
-  "ifACompanyAnnounces": "If a company announces a share split or reserve share split, the company's share price will be subject to significant change.",
-  "reserveShareSplit": "Reserve Share Split: CFD price will increase",
-  "shareSplit": "Share Split :CFD price will decrease",
-  "openPositions": "Open positions of the Apple Inc CFD. Should this not just say clients who are holding open positions of the relevant CFD?",
-  "however": "However, a single share CFD will also be affected by corporate action, which may occur when the listed company initiates any business changes Like a share split, reserve share split, or a dividend payout, etc., and as a result may affect the company's financial position, its share price performance, and the interests of shareholders.",
-  "dividends": "Dividends",
-  "aListedCompany": "A listed company will announce its earnings reports semi-annually (or quarterly). Dividends are subject to approval by a company's board of directors, and It's a distribution of a company's earnings to a specified class of its shareholders. Generally, dividends will be issued in the form of cash dividends or share dividends.",
-  "exDividendDate": "Ex-dividend Date",
-  "anExDividendIs": "An ex-dividend is a share trading term that specifies when a declared dividend is owned by the buyer, as opposed to the seller. If an individual buys a share before the ex-dividend day, he or she is then entitled to receive a dividend. If an individual buys a share on or after the ex-dividend date, the buyer no longer had the right to receive the dividend."
+  "tradeSharesCFDs": "Giao Dịch CFD Trên Cổ Phiếu",
+  "WCGOffersAWideRange": "WCG cung cấp nhiều loại cổ phiếu CFD trên nền tảng giao dịch trực tuyến của mình. Bắt đầu giao dịch ngay bây giờ để hưởng lợi từ chênh lệch cạnh tranh, thực hiện giao dịch chất lượng cao và không có hoa hồng. Xin lưu ý rằng vốn của bạn đang gặp rủi ro",
+  "viewTradingProducts": "Xem Sản phẩm Giao dịch",
+  "whyTradeSharesWithWCG": "Tại sao nên giao dịch Cổ phiếu với WCG",
+  "competitivePrices": "Giá cả cạnh tranh Chúng tôi lấy giá từ nhiều địa điểm để đảm bảo bạn có được giá tốt nhất cho giao dịch CFD.",
+  "tradeShortAndLong": "Giao dịch Ngắn hạn và Dài hạn Thực hiện một vị thế mua hoặc bán khi giao dịch với CFD và kiếm lợi nhuận tiềm năng từ biến động giá.",
+  "tradeShares": "Giao dịch Cổ phiếu dựa trên Đòn bẩy Nhận được đầy đủ khả năng giao dịch với một khoản tiền gửi tương đối nhỏ khi bạn giao dịch cổ phiếu CFD với WCG.",
+  "WCGOffersZeroCommission": "WCG cung cấp hoa hồng bằng 0 khi giao dịch cổ phiếu CFD. Điều đó, kết hợp với các khoản phí ngân hàng không tính trên các giao dịch dẫn đến giao dịch có lợi hơn.",
+  "howDoITradeCFDShares": "Làm cách nào để giao dịch Cổ phiếu CFD với WCG?",
+  "whenTradingASingleCFDShare": "Khi giao dịch một cổ phiếu CFD, sẽ có các hành động của công ty được thực thi bởi công ty liên quan. Một ví dụ về điều này là cổ tức bằng tiền mặt. Nếu điều này đã được ban hành thì WCG sẽ điều chỉnh tài khoản của khách hàng cho phù hợp. WCG sẽ thực hiện hai hành động:",
+  "clientsWhoHoldBUY": "Khách hàng nắm giữ (các) vị thế MUA trong một CFD cổ phiếu vào ngày giao dịch không hưởng quyền sẽ nhận được một khoản tiền dương tương đương với khoản chi trả cổ tức. (Tiền gửi sẽ được thực hiện vào tài khoản giao dịch của khách hàng theo quy mô lô và tỷ lệ cổ tức trả cổ tức của chứng khoán cơ sở).",
+  "ClientsWhoHoldSELL": "Khách hàng nắm giữ (các) vị thế BÁN trong một CFD cổ phiếu duy nhất vào ngày giao dịch không hưởng quyền nhận cổ tức, sẽ nhận được một khoản tiền mặt tương đương với khoản chi trả cổ tức. (Việc rút tiền sẽ được thực hiện từ tài khoản giao dịch của khách hàng theo quy mô lô và tỷ lệ cổ tức trả cổ tức của chứng khoán cơ sở).",
+  "adjustmentFormula": "Công thức điều chỉnh: Số lượng cổ phiếu x Cổ tức trên mỗi cổ phiếu = Số tiền điều chỉnh",
+  "cashDividend": "Cổ phần bằng tiền mặt",
+  "forExample": "Ví dụ: nếu Apple Inc. (AAPL) thông báo cổ tức bằng tiền mặt 0,01 đô la Mỹ cho các cổ đông của mình. Vào ngày giao dịch không hưởng quyền chia cổ tức, giá cổ phiếu của Apple Inc. sẽ phản ánh hành động của công ty và sẽ giảm giá 0,01 USD. WCG sẽ thực hiện các điều chỉnh tiền mặt cho các khách hàng đang nắm giữ các vị thế mở của CFD Apple Inc.",
+  "ifAnIndividualClient": "Nếu một khách hàng cá nhân của WCG đang nắm giữ 10.000 cổ phiếu vị thế MUA, điều chỉnh tiền mặt sẽ được tính theo công thức sau: 10.000 cổ phiếu CFD x 0,01USD = 100USD cổ tức bằng tiền mặt (Lưu ý: Nếu khách hàng đang nắm giữ 10.000 cổ phiếu vị thế BÁN, WCG sẽ trừ 100USD vào tài khoản của khách hàng).",
+  "shareSplitOrReserveShareSplit": "Chia cổ phiếu hoặc Chia cổ phiếu dự trữ",
+  "ifACompanyAnnounces": "Nếu một công ty thông báo chia cổ phiếu hoặc chia cổ phiếu dự trữ, giá cổ phiếu của công ty sẽ có thể thay đổi đáng kể.",
+  "reserveShareSplit": "Chia cổ phiếu dự trữ: Giá CFD sẽ tăng",
+  "shareSplit": "Chia tách cổ phiếu: Giá CFD sẽ giảm",
+  "openPositions": "Các vị trí mở của CFD của Apple Inc. Điều này không nên chỉ nói những khách hàng đang nắm giữ các vị thế mở của CFD có liên quan?",
+  "however": "Tuy nhiên, một CFD cổ phiếu đơn lẻ cũng sẽ bị ảnh hưởng bởi hành động của công ty, điều này có thể xảy ra khi công ty niêm yết bắt đầu bất kỳ thay đổi kinh doanh nào như chia cổ phiếu, chia cổ phiếu dự trữ hoặc chia cổ tức, v.v. và do đó có thể ảnh hưởng đến hoạt động kinh doanh của công ty tình hình tài chính, hiệu suất giá cổ phiếu và lợi ích của các cổ đông.",
+  "dividends": "Cổ tức",
+  "aListedCompany": "Một công ty niêm yết sẽ công bố báo cáo thu nhập nửa năm một lần (hoặc hàng quý). Cổ tức tùy thuộc vào sự chấp thuận của hội đồng quản trị của công ty và Đó là sự phân phối thu nhập của một công ty cho một nhóm cổ đông cụ thể. Thông thường, cổ tức sẽ được phát hành dưới hình thức cổ tức tiền mặt hoặc cổ tức bằng cổ phiếu.",
+  "exDividendDate": "Ngày giao dịch không hưởng cổ tức",
+  "anExDividendIs": "Không trả cổ tức là một thuật ngữ giao dịch cổ phiếu xác định thời điểm cổ tức được công bố thuộc sở hữu của người mua, trái ngược với người bán. Nếu cá nhân mua cổ phiếu trước ngày giao dịch không hưởng quyền thì người đó được nhận cổ tức. Nếu một cá nhân mua cổ phiếu vào hoặc sau ngày giao dịch không hưởng quyền, thì người mua không còn quyền nhận cổ tức."
 }
