--- a/src/i18n/locales/zh/platform.json
+++ b/src/i18n/locales/zh/platform.json
@@ -7,7 +7,7 @@
   "diversifiedInvestmentTransactions": "分散投資交易",
   "theBestWayToManageRisk": "管理風險的最佳方式就是分散投資。在WCG的MT4交易平台中，您可以從一系列的交易產品及市場中作出選擇，從而強化及分散您的投資。",
   "intuitiveAndEasyToUse": "直觀且方便易用",
-  "completeAndComprehensiveReports": "完善的綜合報表，例如跟蹤號碼，開盤價，交易量，所有訂單的賬戶狀態和持倉的綜合信息，都能在程序端窗口提供。並且可以隨時隨地查看即時市場資訊，輔助您作出理性的交易決策，更完整的支援智慧交易（EA）和策略回測系統，為您提供高度的交易靈活性、監督以及控制。",
+  "completeAndComprehensiveReports": "完善的綜合報表，例如跟蹤號碼，開盤價，交易量，所有訂單的帳戶狀態和持倉的綜合信息，都能在程序端窗口提供。並且可以隨時隨地查看即時市場資訊，輔助您作出理性的交易決策，更完整的支援智慧交易（EA）和策略回測系統，為您提供高度的交易靈活性、監督以及控制。",
   "automaticAdaptabilityAndScalability": "自動適應性和可擴充性",
   "throughTheFurtherDevelopment": "透過進一步開發的API程式能夠將WCGMT4與您現有的交易設備完美融合，不管您身處世界任何一個角落，您都可以隨時接入您的交易平台，定制您的指標、進行指令、執行交易，設定限價、止損訂單、以及追蹤市場動向，確保您即使在外出時，也不會錯過任何一個交易機會和重要的市場資料。",
   "downloadWCGMT4TradingPlatform": "下載WCG MT4交易平台",
@@ -35,14 +35,14 @@
   "compatibleWithExpertAdvisors": "兼容EA交易(智慧自動交易程式)、自定指標及其他應用工具",
   "itHasAMobileVersion": "擁有手機版交易平台，可用手機APP隨時隨地進行交易、管理訂單",
   "provideAnAdvanced": "提供先進的通知信號系統",
-  "downloadTheWCGMT4": "立即下載WCG MT4交易平台，",
+  "downloadTheWCGMT4": "立即下載WCG MT4交易平台",
   "usingMT4AllowsYou": "使用 MT4 讓您能更精準地監控市場，快速又高效地管您的倉位，優化交易策略，提升您你的交易優勢，享受完美的交易體驗。",
   "tradingSystem": "交易系統",
   "includesCurrentPriceExecution": "包括現價成交，以及買賣雙向交易，四種掛單和二種止損單和追蹤止損功能。一鍵交易功能可以使您從圖表上一次點擊即可直接發送交易命令。內置的報價圖表提供了準確的判斷交易時機的方法。",
   "technicalAnalysis": "技術分析",
   "MT4ProvidesAMoreComprehensive": "提供了更全面的分析機會。每個交易品種都可以顯示九種時間週期，可以使交易者看到詳細的價格動態。結合這些工具，確定行情趨勢，強大的分析能力幫您更徹底的分析市場動向，把握最佳時刻。",
   "safeAndConvenient": "安全便利",
-  "advancedTradingAndAnalysisFunctions": "先進的交易和分析功能，友好的用戶界面，有助於您輕鬆的了解全部功能和操作規則。符合最高的安全標準。客戶端和平台服務器之間的數據交換完全加密，讓您的交易賬戶得到最安全的保護。",
+  "advancedTradingAndAnalysisFunctions": "先進的交易和分析功能，友好的用戶界面，有助於您輕鬆的了解全部功能和操作規則。符合最高的安全標準。客戶端和平台服務器之間的數據交換完全加密，讓您的交易帳戶得到最安全的保護。",
   "MT4APPVersion": "MT4 APP 版（安卓 / iOS）",
   "weProvideTheMT4MobileApplication": "我們提供 MT4 移動應用程式，只要在您在手機或平版電腦下載及安裝MT4APP，可以輕鬆實現隨時隨地交易。MT4 iOS及安卓 APP 提供更簡化的操作介面，能夠更方快捷的監察市場走勢，享受卓越的交易體驗。是您的每日助手，更是您不可替代的工具。",
   "MetaTrader4MobileApp": "MetaTrader4 手機APP",
